added meta description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Edit meta description for SEO -->
+  <meta name="description" content="A website for Marco. I'm student currently pursuing my bachelor's degree in Computer
+  Science. I'm passionate about developing products that make people's
+  lives easier and miserable.">
+  <!-- Edit title -->
   <title>Marco</title>
 
   <!-- Fonts -->
