Add minor changes
add explicit width and height
change language used color

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
       <!-- pfp -->
       <div class="img-container">
-        <img src="./asset/img/Watashi.jpeg" alt="pfp" />
+        <img width="80" height="80" src="./asset/img/Watashi.jpeg" alt="pfp" />
       </div>
 
       <!-- info -->
@@ -54,11 +54,12 @@
 
         <div class="social-container">
           <!-- GITHUB -->
-          <a href="https://github.com/notshanxx" target="_blank"><img src="./asset/svg/github.svg" alt="github" /></a>
+          <a href="https://github.com/notshanxx" target="_blank"><img width="24" height="24"
+              src="./asset/svg/github.svg" alt="github" /></a>
 
           <!-- LINKEDIN -->
-          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank"><img
-              src="./asset/svg/linkedin.svg" alt="linkedin" /></a>
+          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank"><img width="24"
+              height="24" src="./asset/svg/linkedin.svg" alt="linkedin" /></a>
         </div>
 
         <!-- name -->
@@ -100,8 +101,8 @@
           <a href="https://github.com/notshanxx/anicard" target="_blank" rel="noopener noreferrer">
             <h3>anicard</h3>
           </a>
-          <a href="https://github.com/notshanxx/anicard" target="_blank" rel="noopener noreferrer"><img
-              src="./asset/svg/external-link.svg" alt="external-link" /></a>
+          <a href="https://github.com/notshanxx/anicard" target="_blank" rel="noopener noreferrer"><img width="16"
+              height="16" src="./asset/svg/external-link.svg" alt="external-link" /></a>
 
         </div>
 
@@ -122,8 +123,8 @@
           <a href="https://github.com/notshanxx/anicard" target="_blank" rel="noopener noreferrer">
             <h3>catnapping</h3>
           </a>
-          <a href="https://github.com/notshanxx/anicard" target="_blank" rel="noopener noreferrer"><img
-              src="./asset/svg/external-link.svg" alt="external-link" /></a>
+          <a href="https://github.com/notshanxx/anicard" target="_blank" rel="noopener noreferrer"><img width="16"
+              height="16" src="./asset/svg/external-link.svg" alt="external-link" /></a>
 
         </div>
 
