Added multiple updates
Added about section
Added footer
Change svgs
format codes
added more comments
change color

--- a/index.html
+++ b/index.html
@@ -1,157 +1,391 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- Edit meta description for SEO -->
-  <meta name="description" content="A website for Marco. I'm student currently pursuing my bachelor's degree in Computer
+    <!-- Edit meta description for SEO -->
+
+    <meta
+      name="description"
+      content="A website for Marco. I'm student currently pursuing my bachelor's degree in Computer
   Science. I'm passionate about developing products that make people's
-  lives easier and miserable.">
-  <!-- Edit title -->
-  <title>Marco</title>
+  lives easier and miserable."
+    />
+    <!-- Edit title -->
+    <title>Marco</title>
 
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="preload"
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&family=Work+Sans:wght@400;800&display=swap"
-    as="style" onload="this.onload=null;this.rel='stylesheet'" />
-
-  <noscript>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="preload"
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&family=Work+Sans:wght@400;800&display=swap"
-      rel="stylesheet" type="text/css" />
-  </noscript>
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
 
-  <!-- Styleshits -->
-  <link rel="stylesheet" href="styles.css" />
-</head>
+    <noscript>
+      <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&family=Work+Sans:wght@400;800&display=swap"
+        rel="stylesheet"
+        type="text/css"
+      />
+    </noscript>
 
-<body>
-  <nav>
-    <ul>
-      <li><a href="#top">HOME</a></li>
-      <li><a href="#project">PROJECTS</a></li>
-      <li><a href="#fin">ABOUT</a></li>
-    </ul>
-  </nav>
+    <!-- Styleshits -->
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-  <!-- Home -->
-  <main>
-    <!-- img and info container -->
-    <div class="img-info-container">
+  <body>
+    <!-- Navigation -->
+    <nav>
+      <ul>
+        <li><a href="#top">HOME</a></li>
+        <li><a href="#project">PROJECTS</a></li>
+        <li><a href="#about">ABOUT</a></li>
+      </ul>
+    </nav>
+    <!-- End of Navigation -->
 
-      <!-- pfp -->
-      <div class="img-container">
-        <img width="80" height="80" src="./asset/img/Watashi.jpeg" alt="pfp" />
-      </div>
+    <!-- Home -->
+    <section class="center">
+      <main>
+        <!-- img and info container -->
+        <div class="img-info-container">
+          <!-- profile picture -->
+          <div class="img-container">
+            <img
+              width="80"
+              height="80"
+              src="./asset/img/Watashi.jpeg"
+              alt="pfp"
+            />
+          </div>
 
-      <!-- info -->
-      <div class="info-container">
-        <!-- svg container -->
+          <!-- info / the large text and social media -->
+          <div class="info-container">
+            <!-- svg/social media container -->
+            <div class="social-container">
+              <!-- GITHUB -->
+              <a href="https://github.com/notshanxx" target="_blank"
+                ><img
+                  width="24"
+                  height="24"
+                  src="./asset/svg/github.svg"
+                  alt="github"
+              /></a>
 
-        <div class="social-container">
-          <!-- GITHUB -->
-          <a href="https://github.com/notshanxx" target="_blank"><img width="24" height="24"
-              src="./asset/svg/github.svg" alt="github" /></a>
+              <!-- LINKEDIN -->
+              <a
+                href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"
+                target="_blank"
+                ><img
+                  width="24"
+                  height="24"
+                  src="./asset/svg/linkedin.svg"
+                  alt="linkedin"
+              /></a>
+            </div>
 
-          <!-- LINKEDIN -->
-          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank"><img width="24"
-              height="24" src="./asset/svg/linkedin.svg" alt="linkedin" /></a>
+            <!-- name -->
+            <h1>MARCO</h1>
+            <hr />
+          </div>
         </div>
 
-        <!-- name -->
-        <h1>MARCO</h1>
-        <hr />
-      </div>
-    </div>
-
-    <p class="user-bio">
-      I’m a Student currently pursuing my bachelor's degree in Computer
-      Science. <br> I’m passionate about developing products that make people's
-      lives easier and miserable.
-      <!-- <br />
+        <p class="user-bio">
+          I’m a Student currently pursuing my bachelor's degree in Computer
+          Science. <br />
+          I’m passionate about developing products that make people's lives
+          easier and miserable.
+          <!-- <br />
         <br />
         Interested in Web, Software, App, Game Development, Board Games, Guitar,
         Basketball, Football, Drawing -->
-    </p>
-
-    <div class="quote-container">
-      <p>
-        <i>
-          You cannot use the word "possibility" without limitations <br />
-          - Master Higuchi
-        </i>
-      </p>
-    </div>
-  </main>
-  <!-- End of Home -->
-
-  <!-- Start of Project -->
-  <div id="project">
-    <h2>PROJECTS</h2>
-
-    <div class="project-container">
-      <!-- Repo -->
-      <div class="repository-container">
-        <div class="repository-head">
-
-          <a href="https://github.com/notshanxx/anicard" target="_blank" rel="noopener noreferrer">
-            <h3>anicard</h3>
-          </a>
-          <a href="https://github.com/notshanxx/anicard" target="_blank" rel="noopener noreferrer"><img width="16"
-              height="16" src="./asset/svg/external-link.svg" alt="external-link" /></a>
-
-        </div>
-
-        <p class="repository-description">
-          Create simple cards with anime information and cover on it.
         </p>
-        <div class="repository-language-used-container">
-          <span class="language-used">Javascript</span>
-          <span class="language-used">CSS</span>
-          <span class="language-used">HTML</span>
+        <!-- Quote  -->
+        <div class="quote-container">
+          <p>
+            <i>
+              You cannot use the word "possibility" without limitations <br />
+              - Master Higuchi
+            </i>
+          </p>
         </div>
-      </div>
+      </main>
+    </section>
+    <!-- End of Home -->
 
-      <!-- Repo -->
-      <div class="repository-container">
-        <div class="repository-head">
+    <!-- Start of Project -->
+    <section class="center">
+      <div id="project">
+        <h2>PROJECTS</h2>
+        <!-- project container/ grid -->
+        <div class="project-container">
+          <!-- Repo -->
+          <div class="repository-container">
+            <div class="repository-head">
+              <a
+                href="https://github.com/notshanxx/anicard"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <h3>anicard</h3>
+              </a>
+              <a
+                href="https://github.com/notshanxx/anicard"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img
+                  width="16"
+                  height="16"
+                  src="./asset/svg/external-link.svg"
+                  alt="external-link"
+              /></a>
+            </div>
 
-          <a href="https://github.com/notshanxx/anicard" target="_blank" rel="noopener noreferrer">
-            <h3>catnapping</h3>
-          </a>
-          <a href="https://github.com/notshanxx/anicard" target="_blank" rel="noopener noreferrer"><img width="16"
-              height="16" src="./asset/svg/external-link.svg" alt="external-link" /></a>
+            <p class="repository-description">
+              Create simple cards with anime information and cover on it.
+            </p>
+            <div class="repository-language-used-container">
+              <span class="language-used">Javascript</span>
+              <span class="language-used">CSS</span>
+              <span class="language-used">HTML</span>
+            </div>
+          </div>
+          <!-- Repo End -->
+          <!-- Repo -->
+          <div class="repository-container">
+            <div class="repository-head">
+              <a
+                href="https://github.com/notshanxx/anicard"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <h3>catnapping</h3>
+              </a>
+              <a
+                href="https://github.com/notshanxx/anicard"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img
+                  width="16"
+                  height="16"
+                  src="./asset/svg/external-link.svg"
+                  alt="external-link"
+              /></a>
+            </div>
 
+            <p class="repository-description">A website with cats</p>
+            <div class="repository-language-used-container">
+              <span class="language-used">Svelte</span>
+              <span class="language-used">Tailwind</span>
+            </div>
+          </div>
+          <!-- Repo End -->
+          <!-- Repo -->
+          <div class="repository-container">
+            <div class="repository-head">
+              <a
+                href="https://github.com/notshanxx"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <h3>star platinum</h3>
+              </a>
+              <a
+                href="https://github.com/notshanxx"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img
+                  width="16"
+                  height="16"
+                  src="./asset/svg/external-link.svg"
+                  alt="external-link"
+              /></a>
+            </div>
+
+            <p class="repository-description">Ahhhh-nother project</p>
+            <div class="repository-language-used-container">
+              <span class="language-used">Svelte</span>
+              <span class="language-used">Tailwind</span>
+            </div>
+          </div>
+          <!-- Repo End -->
+          <!-- Repo -->
+          <div class="repository-container">
+            <div class="repository-head">
+              <a
+                href="https://github.com/notshanxx"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <h3>killer queen</h3>
+              </a>
+              <a
+                href="https://github.com/notshanxx"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img
+                  width="16"
+                  height="16"
+                  src="./asset/svg/external-link.svg"
+                  alt="external-link"
+              /></a>
+            </div>
+
+            <p class="repository-description">Ahhhh-nother project</p>
+            <div class="repository-language-used-container">
+              <span class="language-used">Svelte</span>
+              <span class="language-used">Tailwind</span>
+            </div>
+          </div>
+          <!-- Repo End -->
+          <!-- Repo -->
+          <div class="repository-container">
+            <div class="repository-head">
+              <a
+                href="https://github.com/notshanxx"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <h3>golden experience requiem</h3>
+              </a>
+              <a
+                href="https://github.com/notshanxx"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img
+                  width="16"
+                  height="16"
+                  src="./asset/svg/external-link.svg"
+                  alt="external-link"
+              /></a>
+            </div>
+
+            <p class="repository-description">Ahhhh-nother project</p>
+            <div class="repository-language-used-container">
+              <span class="language-used">Svelte</span>
+              <span class="language-used">Tailwind</span>
+            </div>
+          </div>
+          <!-- Repo End -->
+          <!-- Repo -->
+          <div class="repository-container">
+            <div class="repository-head">
+              <a
+                href="https://github.com/notshanxx"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <h3>made in heaven</h3>
+              </a>
+              <a
+                href="https://github.com/notshanxx"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img
+                  width="16"
+                  height="16"
+                  src="./asset/svg/external-link.svg"
+                  alt="external-link"
+              /></a>
+            </div>
+
+            <p class="repository-description">Ahhhh-nother project</p>
+            <div class="repository-language-used-container">
+              <span class="language-used">Svelte</span>
+              <span class="language-used">Tailwind</span>
+            </div>
+          </div>
+          <!-- Repo End -->
         </div>
 
-        <p class="repository-description">
-          A website with cats
-        </p>
-        <div class="repository-language-used-container">
-          <span class="language-used">Svelte</span>
-          <span class="language-used">Tailwind</span>
-
+        <!-- To github repos -->
+        <div class="repository-container more-repo">
+          more at
+          <a
+            href="https://github.com/notshanxx?tab=repositories"
+            target="_blank"
+            >GITHUB <img src="./asset/svg/external-link.svg" alt=""
+          /></a>
         </div>
+        <!-- To github repos End-->
       </div>
-
-      <div class="repository-container more-repo">
-        more at <a href="https://github.com/notshanxx?tab=repositories" target="_blank">GITHUB</a>
-      </div>
-    </div>
-
+    </section>
     <!-- End of Project -->
-    <h1 id="fin" style="
+
+    <!-- About -->
+    <div class="center">
+      <div id="about">
+        <!-- Image  -->
+        <div class="about-img-container">
+          <img
+            width="80"
+            height="80"
+            src="./asset/img/Watashi.jpeg"
+            alt="pfp"
+          />
+        </div>
+        <!-- Name -->
+        <h2 class="gradient">Marco Manuel</h2>
+        <!-- social media container -->
+        <ul class="about-social-container">
+          <li>
+            <img src="./asset/svg/github.svg" alt="Github" />
+            <a href="https://github.com/notshanxx/">Github</a>
+          </li>
+
+          <li>
+            <img src="./asset/svg/mail.svg" alt="LinkedIn" />
+            <a href="https://github.com/notshanxx/">Mail</a>
+          </li>
+
+          <li>
+            <img src="./asset/svg/linkedin.svg" alt="LinkedIn" />
+            <a href="https://github.com/notshanxx/"> LinkedIn</a>
+          </li>
+        </ul>
+        <!-- long bio -->
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
+          repellendus magnam vel deleniti ea quidem aliquid veniam minima,
+          eveniet impedit consequatur nemo dolorem rerum cumque sed qui ratione
+          culpa saepe.
+        </p>
+<!-- skills tool -->
+        <h3>Skills / Tools</h3>
+        <ul class="skill">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>TypeScript</li>
+          <li>Phyton</li>
+          <li>React</li>
+          <li>Svelte</li>
+          <li>Node.js</li>
+          <li>Git</li>
+        </ul>
+      </div>
+    </div>
+
+    <footer>
+      <!-- Its okay to remove my name here (indeed you'll get hit) -->
+      <p>
+        © 2023 Built by <a href="https://github.com/notshanxx">notshanxx</a>
+      </p>
+    </footer>
+
+    <!-- <h1 id="fin" style="
         font-family: 'Work Sans', sans-serif;
         font-size: 20px;
         margin: 100vh 0 50vh 0;
       ">
       <i>~ fin ~</i>
-    </h1>
+    </h1> -->
+    <!-- remove if you want to remove hover effect -->
     <script type="module" src="./script/event-effect.js"></script>
-</body>
-
+  </body>
 </html>
