--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
           eveniet impedit consequatur nemo dolorem rerum cumque sed qui ratione
           culpa saepe.
         </p>
-<!-- skills tool -->
+        <!-- Skills / Tools -->
         <h3>Skills / Tools</h3>
         <ul class="skill">
           <li>HTML</li>
