--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
             <div class="repository-language-used-container">
               <span class="language-used">Svelte</span>
               <span class="language-used">Tailwind</span>
+              <span class="language-used">Vite</span>
             </div>
           </div>
           <!-- Repo End -->
@@ -189,14 +190,14 @@
           <div class="repository-container">
             <div class="repository-head">
               <a
-                href="https://github.com/notshanxx"
+                href="https://github.com/notshanxx/anicard"
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <h3>star platinum</h3>
+                <h3>plainfolio</h3>
               </a>
               <a
-                href="https://github.com/notshanxx"
+                href="https://github.com/notshanxx/anicard"
                 target="_blank"
                 rel="noopener noreferrer"
                 ><img
@@ -207,100 +208,16 @@
               /></a>
             </div>
 
-            <p class="repository-description">Ahhhh-nother project</p>
+            <p class="repository-description">A plain portfolio template (this)</p>
             <div class="repository-language-used-container">
-              <span class="language-used">Svelte</span>
-              <span class="language-used">Tailwind</span>
-            </div>
-          </div>
-          <!-- Repo End -->
-          <!-- Repo -->
-          <div class="repository-container">
-            <div class="repository-head">
-              <a
-                href="https://github.com/notshanxx"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <h3>killer queen</h3>
-              </a>
-              <a
-                href="https://github.com/notshanxx"
-                target="_blank"
-                rel="noopener noreferrer"
-                ><img
-                  width="16"
-                  height="16"
-                  src="./asset/svg/external-link.svg"
-                  alt="external-link"
-              /></a>
-            </div>
+              <span class="language-used">HTML</span>
+              <span class="language-used">CSS</span>
+              <span class="language-used">Vite</span>
 
-            <p class="repository-description">Ahhhh-nother project</p>
-            <div class="repository-language-used-container">
-              <span class="language-used">Svelte</span>
-              <span class="language-used">Tailwind</span>
             </div>
           </div>
           <!-- Repo End -->
-          <!-- Repo -->
-          <div class="repository-container">
-            <div class="repository-head">
-              <a
-                href="https://github.com/notshanxx"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <h3>golden experience requiem</h3>
-              </a>
-              <a
-                href="https://github.com/notshanxx"
-                target="_blank"
-                rel="noopener noreferrer"
-                ><img
-                  width="16"
-                  height="16"
-                  src="./asset/svg/external-link.svg"
-                  alt="external-link"
-              /></a>
-            </div>
-
-            <p class="repository-description">Ahhhh-nother project</p>
-            <div class="repository-language-used-container">
-              <span class="language-used">Svelte</span>
-              <span class="language-used">Tailwind</span>
-            </div>
-          </div>
-          <!-- Repo End -->
-          <!-- Repo -->
-          <div class="repository-container">
-            <div class="repository-head">
-              <a
-                href="https://github.com/notshanxx"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <h3>made in heaven</h3>
-              </a>
-              <a
-                href="https://github.com/notshanxx"
-                target="_blank"
-                rel="noopener noreferrer"
-                ><img
-                  width="16"
-                  height="16"
-                  src="./asset/svg/external-link.svg"
-                  alt="external-link"
-              /></a>
-            </div>
-
-            <p class="repository-description">Ahhhh-nother project</p>
-            <div class="repository-language-used-container">
-              <span class="language-used">Svelte</span>
-              <span class="language-used">Tailwind</span>
-            </div>
-          </div>
-          <!-- Repo End -->
+          
         </div>
 
         <!-- To github repos -->
@@ -340,20 +257,19 @@
 
           <li>
             <img src="./asset/svg/mail.svg" alt="LinkedIn" />
-            <a href="https://github.com/notshanxx/">Mail</a>
+            <a href="#">Mail</a>
           </li>
 
           <li>
             <img src="./asset/svg/linkedin.svg" alt="LinkedIn" />
-            <a href="https://github.com/notshanxx/"> LinkedIn</a>
+            <a href="#"> LinkedIn</a>
           </li>
         </ul>
         <!-- long bio -->
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
-          repellendus magnam vel deleniti ea quidem aliquid veniam minima,
-          eveniet impedit consequatur nemo dolorem rerum cumque sed qui ratione
-          culpa saepe.
+          I'm an upcoming first year college student currently pursuing my bachelor's degree in Computer
+          Science. <br />
+         I also make random things what comes into my mega big brain. <br>
         </p>
         <!-- Skills / Tools -->
         <h3>Skills / Tools</h3>
@@ -366,7 +282,9 @@
           <li>React</li>
           <li>Svelte</li>
           <li>Node.js</li>
+          <li>Vite</li>
           <li>Git</li>
+          <li>Linux (Ubuntu)</li>
         </ul>
       </div>
     </div>
