year changes automatically

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
     <footer>
       <!-- Its okay to remove my name here (indeed you'll get hit) -->
       <p>
-        © 2023 Built by <a href="https://github.com/notshanxx">notshanxx</a>
+        © <script>document.write( new Date().getFullYear() );</script> Built by <a href="https://github.com/notshanxx">notshanxx</a>
       </p>
     </footer>
 
