--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   lives easier and miserable."
     />
     <!-- Edit title -->
-    <title>Marco</title>
+    <title>Anqi</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
